--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<version>2.7.18</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
